<resources>
    <string name="app_name">RecyclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="active_cases">Active Cases : %s</string>
    <string name="new_cases">New Cases : %s</string>
    <string name="total_cases">Total Cases : %s</string>
    <string name="new_deaths">New Deaths : %s</string>
    <string name="total_deaths">Total Deaths :%s</string>
    <string name="total_recovered">Total Recovered : %s</string>
</resources>